backgrond colour changed to green

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,6 @@ $mainTransaction: all 0.3 linear;
 
 body {
   font-family: "Open Sans", sans-serif;
-  background: $mainWhite;
+  background: $mainGreen;
   color: $mainBlack;
 }
